--- a/pro2.7.3-2.html
+++ b/pro2.7.3-2.html
@@ -1,10 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/pro2.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Not a Real CRM - IcecreamArtist</title>
+    <link rel="shortcut icon" href="images/ico/favicon.png">
 </head>
 <body>
 
+<ul id="th">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Catalog</a></li>
+    <li><a href="#">Inventory</a></li>
+</ul>
+
+<header>
+    <h1>!aCRM</h1>
+</header>
+
+<ul id="tm">
+    <li><a href="#">Contacts</a></li>
+    <li><a href="#rel">Orders</a></li>
+    <li><a href="#rev">Calendar</a></li>
+    <li><a href="#">Tasks</a></li>
+    <li><a href="#">Evaluation Copies</a></li>
+</ul>
+<div id="tmp">
+    <div id="pic">
+        <img src="images/project2/jack.png" width="150" height="150">
+        <!-- 头像之类的 -->
+    </div>
+    <p id="jack">Jack Smith</p>
+</div>
+<div id="ind">
+    <div class="pp">
+        <h2 class="sep">Personal Details</h2>
+        <div class="pp2">
+            <p><span class="gre">Address:</span> 1 Microsoft Way</p>
+            <p><span class="gre">City:</span> Redmond</p>
+            <p><span class="gre">Region:</span> WA</p>
+            <p><span class="gre">Country:</span> USA</p>
+            <p><span class="gre">Postal: </span>98052-8300</p>
+        </div>
+        <div class="ppp">
+            <p>
+                <a class="button button-orange">
+                    <img src="images/project2/pen.png" height="16" width="16">
+                    <strong>Edit</strong>
+                </a>
+                <a class="button button-purple">
+                    <img src="images/project2/flag.png" height="16" width="16">
+                    <strong>Flag</strong>
+                </a>
+            </p>
+        </div>
+    </div>
+
+    <div class="pp">
+        <h2 class="sep">Contact</h2>
+        <div class="pp2">
+            <p>
+                <span class="gre">Phone: </span>
+                <img src="images/project2/bell.png" height="15" width="15">
+                <a href="https://codeforces.com/profile/IcecreamArtist">+1(425) 882-8080</a>
+            </p>
+            <p>
+                <span class="gre">Email: </span>
+                <img src="images/project2/email.png" height="15" width="15">
+                <a href="https://codeforces.com/profile/IcecreamArtist">jacksmith@microsoft.com</a>
+            </p>
+        </div>
+        <div class="ppp">
+            <p>
+                <a class="button button-orange">
+                    <img src="images/project2/pen.png" height="16" width="16">
+                    <strong>Edit</strong>
+                </a>
+                <a class="button button-purple">
+                    <img src="images/project2/flag.png" height="16" width="16">
+                    <strong>Flag</strong>
+                </a>
+            </p>
+        </div>
+    </div>
+
+    <div class="pp">
+        <h2 class="sep">Sales Activity</h2>
+        <img src="images/project2/sales.png" width="900" height="600">
+    </div>
+
+    <footer>
+        <p><a href="#">Home</a>|<a href="#">Catalog</a>|<a href="#">Inventory</a></p>
+        <p><small>Copyright &copy; 2013 Not a Real CRM</small></p>
+    </footer>
+</div>
 </body>
 </html>
