--- a/pro2.7.3-1.html
+++ b/pro2.7.3-1.html
@@ -1,59 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/pro1.css">
     <meta charset="UTF-8">
     <title>Share Your Travels - IcecreamArtist</title>
+    <link rel="shortcut icon" href="images/ico/favicon.png">
 </head>
 <body>
 
-<h1>Share Your Travels</h1>
-<h2>New York - Central Park</h2>
+<header id="h0">
+    <h1>Share Your Travels</h1>
+    <h2>Let us know where you've been</h2>
+</header>
+
 <ul>
     <li><a href="#foo">Description</a></li>
     <li><a href="#rel">Related Photos</a></li>
     <li><a href="#rev">Reviews</a></li>
 </ul>
-<h3 id="foo">Description</h3>
-<p>Photo by Randy Connolly</p>
-<p>This photo of Conservatory Pond in
-    <a href="http://www.centralpark.com/">Central Park</a>
-    New York City was taken on October 22, 2015 with a
-    <strong>Canon EOS 300</strong> camera.
-</p>
 
-<div class="img-with-text">
-    <img src="images/project1/central-park.png" width="650" height="400" alt="Central Park" >
-    <p>Cherry Tree in Central Park</p>
-</div>
-<p>Share:</p>
-<div class="bdsharebuttonbox">
-    <a href="#" class="bds_more" data-cmd="more"></a>
-    <a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a>
-    <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
-    <a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a>
-    <a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a>
-    <a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
-</div>
+<section>
+    <h3 id="foo">Description</h3>
+    <hr />
+    <p class="tmp">Photo by Randy Connolly</p>
+    <p>This photo of Conservatory Pond in
+        <a href="http://www.centralpark.com/">Central Park</a>
+        New York City was taken on October 22, 2015 with a
+        <strong>Canon EOS 300</strong> camera.
+    </p>
 
-<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"24"},"share":{},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"24"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+    <div class="img-with-text">
+        <img src="images/project1/central-park.png" width="650" height="400" alt="Central Park" >
+        <p>Cherry Tree in Central Park</p>
+    </div>
+    <p>Share:</p>
+    <div class="bdsharebuttonbox">
+        <a href="#" class="bds_more" data-cmd="more"></a>
+        <a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a>
+        <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
+        <a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a>
+        <a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a>
+        <a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
+    </div>
 
-<h3 id="rel">Related Photos</h3>
-<img src="images/project1/grass.png" alt="grass" width="370" height="200">
-<img src="images/project1/mountain.png" alt="mountain" width="370" height="200">
-<img src="images/project1/city.png" alt="city" width="370" height="200">
+    <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"24"},"share":{},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"24"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
 
-<h3 id="rev">Reviews</h3>
-<div>
-    <p>By Ricardo on <time>September 15, 2015</time></p>
-    <p>Easy on the HDR buddy.</p>
-</div>
+    <h3 id="rel">Related Photos</h3>
+    <hr />
+    <img src="images/project1/grass.png" alt="grass" width="370" height="200">
+    <img src="images/project1/mountain.png" alt="mountain" width="370" height="200">
+    <img src="images/project1/city.png" alt="city" width="370" height="200">
 
-<div>
-    <p>By Susan on <time>October 1, 2015</time></p>
-    <p>I love Central Park.</p>
-</div>
-<p><a href="#">Home</a>|<a href="#">Browse</a>|<a href="#">Search</a> </p>
-<p><small>Copyright &copy; 2015 Share Your Travels</small></p>
+    <h3 id="rev">Reviews</h3>
+    <hr />
+    <div>
+        <p class="tmp">By Ricardo on <time>September 15, 2015</time></p>
+        <p>Easy on the HDR buddy.</p>
+    </div>
+    <hr/>
+
+    <div>
+        <p class="tmp">By Susan on <time>October 1, 2015</time></p>
+        <p>I love Central Park.</p>
+    </div>
+    <hr/>
+</section>
+
+<footer>
+    <p><a href="#">Home</a>|<a href="#">Browse</a>|<a href="#">Search</a> </p>
+    <p><small>Copyright &copy; 2015 Share Your Travels</small></p>
+</footer>
 </body>
 </html>
