--- a/pro2.7.3-1.html
+++ b/pro2.7.3-1.html
@@ -19,9 +19,10 @@
     <li><a href="#rev">Reviews</a></li>
 </ul>
 
+
 <section>
     <h3 id="foo">Description</h3>
-    <hr />
+    <hr/>
     <p class="tmp">Photo by Randy Connolly</p>
     <p>This photo of Conservatory Pond in
         <a href="http://www.centralpark.com/">Central Park</a>
@@ -29,8 +30,8 @@
         <strong>Canon EOS 300</strong> camera.
     </p>
 
-    <div class="img-with-text">
-        <img src="images/project1/central-park.png" width="650" height="400" alt="Central Park" >
+    <div class="tc mld">
+        <img src="images/project1/central-park.png" alt="Central Park">
         <p>Cherry Tree in Central Park</p>
     </div>
     <p>Share:</p>
@@ -43,31 +44,49 @@
         <a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
     </div>
 
-    <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"24"},"share":{},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"24"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+    <script>window._bd_share_config = {
+        "common": {
+            "bdSnsKey": {},
+            "bdText": "",
+            "bdMini": "2",
+            "bdMiniList": false,
+            "bdPic": "",
+            "bdStyle": "0",
+            "bdSize": "24"
+        },
+        "share": {},
+        "image": {"viewList": ["qzone", "tsina", "tqq", "renren", "weixin"], "viewText": "分享到：", "viewSize": "24"},
+        "selectShare": {"bdContainerClass": null, "bdSelectMiniList": ["qzone", "tsina", "tqq", "renren", "weixin"]}
+    };
+    with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
 
     <h3 id="rel">Related Photos</h3>
-    <hr />
+    <hr/>
     <img src="images/project1/grass.png" alt="grass" width="370" height="200">
     <img src="images/project1/mountain.png" alt="mountain" width="370" height="200">
     <img src="images/project1/city.png" alt="city" width="370" height="200">
 
     <h3 id="rev">Reviews</h3>
-    <hr />
+    <hr/>
     <div>
-        <p class="tmp">By Ricardo on <time>September 15, 2015</time></p>
+        <p class="tmp">By Ricardo on
+            <time>September 15, 2015</time>
+        </p>
         <p>Easy on the HDR buddy.</p>
     </div>
     <hr/>
 
     <div>
-        <p class="tmp">By Susan on <time>October 1, 2015</time></p>
+        <p class="tmp">By Susan on
+            <time>October 1, 2015</time>
+        </p>
         <p>I love Central Park.</p>
     </div>
     <hr/>
 </section>
 
 <footer>
-    <p><a href="#">Home</a>|<a href="#">Browse</a>|<a href="#">Search</a> </p>
+    <p><a href="#">Home</a>|<a href="#">Browse</a>|<a href="#">Search</a></p>
     <p><small>Copyright &copy; 2015 Share Your Travels</small></p>
 </footer>
 </body>
